--- a/css/nav.css
+++ b/css/nav.css
@@ -2,8 +2,9 @@
   width: 50px;
   height: 20px;
   position: fixed;
-  top: 4vh;
+  top: 3vh;
   left: 3%;
+  box-sizing: border-box;
   z-index: 20;
   transition: all 0.8s ease; }
   .burger div {
