--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -9,8 +9,9 @@
         width: 50px;
         height: 20px;
         position: fixed;
-        top: 4vh;
+        top: 3vh;
         left: 3%;
+        box-sizing: border-box;
         // background-color: red;
   
         // width: 40px;
