--- a/css/section-main.css
+++ b/css/section-main.css
@@ -28,13 +28,13 @@
       font-style: normal; }
 
 .section-text {
-  padding: 0 5%;
-  text-align: left;
+  padding: 0 4%;
+  text-align: center;
   z-index: 10; }
   .section-text h1 {
     font-size: 4vh; }
   .section-text p {
-    margin-top: 0.2rem;
+    margin-top: 0.3rem;
     font-size: 3vh; }
 
 .section-watercolor {
@@ -57,8 +57,6 @@
   height: auto;
   position: relative;
   padding-top: 10vh; }
-  .section-inc .text {
-    width: 80%; }
   .section-inc .bg1 {
     position: absolute;
     width: 30%;
