--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -49,8 +49,8 @@ $blackcolor: black;
 }
 
 .section-text {
-    padding: 0 5%;
-    text-align: left;
+    padding: 0 4%;
+    text-align: center;
     z-index: 10;
 
     h1 {
@@ -59,7 +59,7 @@ $blackcolor: black;
     }
 
     p {
-        margin-top: 0.2rem;
+        margin-top: 0.3rem;
         // font-size: calc((20vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
         font-size: 3vh;
     }
@@ -73,6 +73,7 @@ $blackcolor: black;
         position: absolute;
         top: 0;
         left: 0;
+        // height: 20vh;
         width: 100%;
         object-fit: contain;
         z-index: -1;
@@ -84,7 +85,7 @@ $blackcolor: black;
 
 .section-inc{
     .text{
-        width: 80%;
+        // width: 80%;
     }
     @include section;
     .bg1{
