--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@
   height: auto;
   position: relative;
   padding-top: 10vh;
+  border: 1px solid red;
   background-image: url("../images/img (14).png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -56,7 +57,8 @@
   min-height: 100vh;
   height: auto;
   position: relative;
-  padding-top: 10vh; }
+  padding-top: 10vh;
+  border: 1px solid red; }
   .section-watercolor .bg {
     position: absolute;
     top: 0;
@@ -70,7 +72,8 @@
   min-height: 100vh;
   height: auto;
   position: relative;
-  padding-top: 10vh; }
+  padding-top: 10vh;
+  border: 1px solid red; }
   .section-inc .bg1 {
     position: absolute;
     width: 30%;
@@ -88,7 +91,8 @@
   min-height: 100vh;
   height: auto;
   position: relative;
-  padding-top: 10vh; }
+  padding-top: 10vh;
+  border: 1px solid red; }
   .section-pencil .bg1 {
     position: absolute;
     top: 25%;
@@ -103,7 +107,8 @@
   min-height: 100vh;
   height: auto;
   position: relative;
-  padding-top: 10vh; }
+  padding-top: 10vh;
+  border: 1px solid red; }
   .section-sepia .bg1 {
     position: absolute;
     width: 100%;
@@ -118,7 +123,8 @@
   min-height: 100vh;
   height: auto;
   position: relative;
-  padding-top: 10vh; }
+  padding-top: 10vh;
+  border: 1px solid red; }
   .section-price .bg1 {
     position: absolute;
     width: 100%;
