--- a/css/section-main.css
+++ b/css/section-main.css
@@ -4,6 +4,7 @@
   height: auto;
   position: relative;
   padding-top: 10vh;
+  border: 1px solid red;
   background-image: url("../images/img (14).png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -42,7 +43,8 @@
   min-height: 100vh;
   height: auto;
   position: relative;
-  padding-top: 10vh; }
+  padding-top: 10vh;
+  border: 1px solid red; }
   .section-watercolor .bg {
     position: absolute;
     top: 0;
@@ -56,7 +58,8 @@
   min-height: 100vh;
   height: auto;
   position: relative;
-  padding-top: 10vh; }
+  padding-top: 10vh;
+  border: 1px solid red; }
   .section-inc .bg1 {
     position: absolute;
     width: 30%;
@@ -74,7 +77,8 @@
   min-height: 100vh;
   height: auto;
   position: relative;
-  padding-top: 10vh; }
+  padding-top: 10vh;
+  border: 1px solid red; }
   .section-pencil .bg1 {
     position: absolute;
     top: 25%;
@@ -89,7 +93,8 @@
   min-height: 100vh;
   height: auto;
   position: relative;
-  padding-top: 10vh; }
+  padding-top: 10vh;
+  border: 1px solid red; }
   .section-sepia .bg1 {
     position: absolute;
     width: 100%;
@@ -104,7 +109,8 @@
   min-height: 100vh;
   height: auto;
   position: relative;
-  padding-top: 10vh; }
+  padding-top: 10vh;
+  border: 1px solid red; }
   .section-price .bg1 {
     position: absolute;
     width: 100%;
