--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
   min-height: 100vh;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid red;
+  border: 1px solid green;
   background-image: url("../images/img (14).png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -56,7 +56,7 @@
   min-height: 100vh;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid red; }
+  border: 1px solid green; }
   .section-watercolor .bg {
     position: absolute;
     top: 0;
@@ -70,7 +70,7 @@
   min-height: 100vh;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid red; }
+  border: 1px solid green; }
   .section-inc .bg1 {
     position: absolute;
     width: 30%;
@@ -88,7 +88,7 @@
   min-height: 100vh;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid red; }
+  border: 1px solid green; }
   .section-pencil .bg1 {
     position: absolute;
     top: 25%;
@@ -103,7 +103,7 @@
   min-height: 100vh;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid red; }
+  border: 1px solid green; }
   .section-sepia .bg1 {
     position: absolute;
     width: 100%;
@@ -118,7 +118,7 @@
   min-height: 100vh;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid red; }
+  border: 1px solid green; }
   .section-price .bg1 {
     position: absolute;
     width: 100%;
@@ -231,11 +231,6 @@
   margin: 0;
   font-family: 'Sansation Light', arial;
   font-size: 36px; }
-
-*,
-*:before,
-*:after {
-  box-sizing: border-box; }
 
 h1,
 h2,
