--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -7,7 +7,7 @@ $blackcolor: black;
     // height: auto;
     position: relative;
     padding-top: 10vh;
-    border: 1px solid red;
+    border: 1px solid green;
 }
 
 .section-main {
