--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
   min-height: 100vh;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid green;
+  border: 1px solid blue;
   background-image: url("../images/img (14).png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -56,7 +56,7 @@
   min-height: 100vh;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid green; }
+  border: 1px solid blue; }
   .section-watercolor .bg {
     position: absolute;
     top: 0;
@@ -70,7 +70,7 @@
   min-height: 100vh;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid green; }
+  border: 1px solid blue; }
   .section-inc .bg1 {
     position: absolute;
     width: 30%;
@@ -88,7 +88,7 @@
   min-height: 100vh;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid green; }
+  border: 1px solid blue; }
   .section-pencil .bg1 {
     position: absolute;
     top: 25%;
@@ -103,7 +103,7 @@
   min-height: 100vh;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid green; }
+  border: 1px solid blue; }
   .section-sepia .bg1 {
     position: absolute;
     width: 100%;
@@ -118,7 +118,7 @@
   min-height: 100vh;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid green; }
+  border: 1px solid blue; }
   .section-price .bg1 {
     position: absolute;
     width: 100%;
