--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,10 @@
 
 .section-main {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh !important;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid blue;
+  border: 1px solid green;
   background-image: url("../images/img (14).png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -53,10 +53,10 @@
 
 .section-watercolor {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh !important;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid blue; }
+  border: 1px solid green; }
   .section-watercolor .bg {
     position: absolute;
     top: 0;
@@ -67,10 +67,10 @@
 
 .section-inc {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh !important;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid blue; }
+  border: 1px solid green; }
   .section-inc .bg1 {
     position: absolute;
     width: 30%;
@@ -85,10 +85,10 @@
 
 .section-pencil {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh !important;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid blue; }
+  border: 1px solid green; }
   .section-pencil .bg1 {
     position: absolute;
     top: 25%;
@@ -100,10 +100,10 @@
 
 .section-sepia {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh !important;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid blue; }
+  border: 1px solid green; }
   .section-sepia .bg1 {
     position: absolute;
     width: 100%;
@@ -115,10 +115,10 @@
 
 .section-price {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh !important;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid blue; }
+  border: 1px solid green; }
   .section-price .bg1 {
     position: absolute;
     width: 100%;
@@ -203,9 +203,9 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   z-index: 7;
-  background-color: #fff;
+  background-color: pink;
   transform: translate(100vw);
   display: flex;
   justify-content: space-evenly;
