--- a/css/section-main.css
+++ b/css/section-main.css
@@ -1,9 +1,9 @@
 .section-main {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh !important;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid blue;
+  border: 1px solid green;
   background-image: url("../images/img (14).png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -39,10 +39,10 @@
 
 .section-watercolor {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh !important;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid blue; }
+  border: 1px solid green; }
   .section-watercolor .bg {
     position: absolute;
     top: 0;
@@ -53,10 +53,10 @@
 
 .section-inc {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh !important;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid blue; }
+  border: 1px solid green; }
   .section-inc .bg1 {
     position: absolute;
     width: 30%;
@@ -71,10 +71,10 @@
 
 .section-pencil {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh !important;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid blue; }
+  border: 1px solid green; }
   .section-pencil .bg1 {
     position: absolute;
     top: 25%;
@@ -86,10 +86,10 @@
 
 .section-sepia {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh !important;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid blue; }
+  border: 1px solid green; }
   .section-sepia .bg1 {
     position: absolute;
     width: 100%;
@@ -101,10 +101,10 @@
 
 .section-price {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh !important;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid blue; }
+  border: 1px solid green; }
   .section-price .bg1 {
     position: absolute;
     width: 100%;
