--- a/css/section-main.css
+++ b/css/section-main.css
@@ -1,9 +1,10 @@
 .section-main {
   width: 100%;
   min-height: 100vh !important;
+  min-height: -webkit-fill-available;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid green;
+  border: 1px solid black;
   background-image: url("../images/img (14).png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -40,9 +41,10 @@
 .section-watercolor {
   width: 100%;
   min-height: 100vh !important;
+  min-height: -webkit-fill-available;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid green; }
+  border: 1px solid black; }
   .section-watercolor .bg {
     position: absolute;
     top: 0;
@@ -54,9 +56,10 @@
 .section-inc {
   width: 100%;
   min-height: 100vh !important;
+  min-height: -webkit-fill-available;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid green; }
+  border: 1px solid black; }
   .section-inc .bg1 {
     position: absolute;
     width: 30%;
@@ -72,9 +75,10 @@
 .section-pencil {
   width: 100%;
   min-height: 100vh !important;
+  min-height: -webkit-fill-available;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid green; }
+  border: 1px solid black; }
   .section-pencil .bg1 {
     position: absolute;
     top: 25%;
@@ -87,9 +91,10 @@
 .section-sepia {
   width: 100%;
   min-height: 100vh !important;
+  min-height: -webkit-fill-available;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid green; }
+  border: 1px solid black; }
   .section-sepia .bg1 {
     position: absolute;
     width: 100%;
@@ -102,9 +107,10 @@
 .section-price {
   width: 100%;
   min-height: 100vh !important;
+  min-height: -webkit-fill-available;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid green; }
+  border: 1px solid black; }
   .section-price .bg1 {
     position: absolute;
     width: 100%;
