--- a/css/nav.css
+++ b/css/nav.css
@@ -51,7 +51,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   z-index: 7;
   background-color: pink;
   transform: translate(100vw);
