--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -82,7 +82,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     z-index: 7;
     // background-color: #fff;
     background-color: pink;
