--- a/css/main.css
+++ b/css/main.css
@@ -26,10 +26,9 @@
   position: relative; }
   .section-main .text {
     position: absolute;
-    margin-top: 25vh;
+    margin-top: 22vh;
     left: 5%; }
     .section-main .text h1 {
-      font-size: calc((250vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
       color: #EC14C9;
       font-family: Rochester;
       font-style: normal;
@@ -37,7 +36,8 @@
     .section-main .text p {
       margin-top: 10%;
       font-family: 'Sansation Light';
-      font-size: calc((20vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
+      font-size: 1.5rem;
+      line-height: 1.8rem;
       color: #E3BBDD;
       font-family: Sansation Light;
       font-style: normal; }
@@ -209,9 +209,9 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   z-index: 7;
-  background-color: pink;
+  background-color: #fff;
   transform: translate(100vw);
   display: flex;
   justify-content: space-evenly;
@@ -227,8 +227,6 @@
       list-style-type: none; }
       .menu ul li a {
         text-decoration: none;
-        font-size: 0.5rem;
-        line-height: 1rem;
         text-transform: uppercase;
         color: black; }
 
