--- a/css/section-main.css
+++ b/css/section-main.css
@@ -12,10 +12,9 @@
   position: relative; }
   .section-main .text {
     position: absolute;
-    margin-top: 25vh;
+    margin-top: 22vh;
     left: 5%; }
     .section-main .text h1 {
-      font-size: calc((250vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
       color: #EC14C9;
       font-family: Rochester;
       font-style: normal;
@@ -23,7 +22,8 @@
     .section-main .text p {
       margin-top: 10%;
       font-family: 'Sansation Light';
-      font-size: calc((20vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
+      font-size: 1.5rem;
+      line-height: 1.8rem;
       color: #E3BBDD;
       font-family: Sansation Light;
       font-style: normal; }
