--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -26,11 +26,11 @@ $blackcolor: black;
     .text {
         position: absolute;
         // width: 30%;
-        margin-top: 25vh;
+        margin-top: 22vh;
         left: 5%;
 
         h1 {
-            font-size: calc((250vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
+            // font-size: calc((250vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
             // font-size: 1rem;
             color: #EC14C9;
             font-family: Rochester;
@@ -41,7 +41,9 @@ $blackcolor: black;
         p {
             margin-top: 10%;
             font-family: 'Sansation Light';
-            font-size: calc((20vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
+            // font-size: calc((20vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
+            font-size: 1.5rem;
+            line-height: 1.8rem;
             color: #E3BBDD;
             font-family: Sansation Light;
             font-style: normal;
