--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -163,7 +163,14 @@ $blackcolor: black;
 
 
 
-
+.uk-panel{
+    // background-color: orange;
+    img{
+        object-fit: cover;
+        //  background-color: red;
+          height: 100%
+    }
+}
 
 
 
