--- a/css/section-main.css
+++ b/css/section-main.css
@@ -4,8 +4,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 10vh;
-  border: 1px solid black;
-  background-image: url("../images/img (14).png");
+  background-image: url("../images/3.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 60%;
@@ -15,7 +14,7 @@
     margin-top: 22vh;
     left: 5%; }
     .section-main .text h1 {
-      color: #EC14C9;
+      color: #ff00d4;
       font-family: Rochester;
       font-style: normal;
       font-weight: normal; }
@@ -35,16 +34,16 @@
   .section-text h1 {
     font-size: 4vh; }
   .section-text p {
-    margin-top: 0.3rem;
-    font-size: 3vh; }
+    margin-top: .5rem !important;
+    font-size: 2.8vh;
+    text-align: center; }
 
 .section-watercolor {
   width: 100%;
   min-height: 100vh !important;
   min-height: -webkit-fill-available;
   position: relative;
-  padding-top: 10vh;
-  border: 1px solid black; }
+  padding-top: 10vh; }
   .section-watercolor .bg {
     position: absolute;
     top: 0;
@@ -58,8 +57,7 @@
   min-height: 100vh !important;
   min-height: -webkit-fill-available;
   position: relative;
-  padding-top: 10vh;
-  border: 1px solid black; }
+  padding-top: 10vh; }
   .section-inc .bg1 {
     position: absolute;
     width: 30%;
@@ -77,8 +75,7 @@
   min-height: 100vh !important;
   min-height: -webkit-fill-available;
   position: relative;
-  padding-top: 10vh;
-  border: 1px solid black; }
+  padding-top: 10vh; }
   .section-pencil .bg1 {
     position: absolute;
     top: 25%;
@@ -93,8 +90,7 @@
   min-height: 100vh !important;
   min-height: -webkit-fill-available;
   position: relative;
-  padding-top: 10vh;
-  border: 1px solid black; }
+  padding-top: 10vh; }
   .section-sepia .bg1 {
     position: absolute;
     width: 100%;
@@ -109,8 +105,7 @@
   min-height: 100vh !important;
   min-height: -webkit-fill-available;
   position: relative;
-  padding-top: 10vh;
-  border: 1px solid black; }
+  padding-top: 10vh; }
   .section-price .bg1 {
     position: absolute;
     width: 100%;
