--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -10,7 +10,7 @@
         height: 20px;
         position: fixed;
         top: 3vh;
-        left: 3%;
+        right: 3%;
         box-sizing: border-box;
         // background-color: red;
   
