--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -6,11 +6,11 @@
     
 
     .burger{
-        width: 50px;
-        height: 20px;
+        width: 40px;
+        height: 30px;
         position: fixed;
         top: 3vh;
-        right: 3%;
+        left: 3%;
         box-sizing: border-box;
         // background-color: red;
   
