--- a/css/nav.css
+++ b/css/nav.css
@@ -1,9 +1,9 @@
 .burger {
-  width: 50px;
-  height: 20px;
+  width: 40px;
+  height: 30px;
   position: fixed;
   top: 3vh;
-  right: 3%;
+  left: 3%;
   box-sizing: border-box;
   z-index: 20;
   transition: all 0.8s ease; }
