--- a/css/main.css
+++ b/css/main.css
@@ -22,16 +22,19 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 60%;
-  position: relative; }
+  position: relative;
+  transition: "all 0.3s ease"; }
   .section-main .text {
     position: absolute;
     margin-top: 22vh;
-    left: 5%; }
+    left: 5%;
+    transition: "all 0.3s ease"; }
     .section-main .text h1 {
       color: #ff00d4;
       font-family: Rochester;
       font-style: normal;
-      font-weight: normal; }
+      font-weight: normal;
+      transition: "all 0.3s ease"; }
     .section-main .text p {
       margin-top: 10%;
       font-family: 'Sansation Light';
@@ -39,7 +42,8 @@
       line-height: 1.8rem;
       color: #E3BBDD;
       font-family: Sansation Light;
-      font-style: normal; }
+      font-style: normal;
+      transition: all 0.1s ease; }
 
 .section-text {
   padding: 0 4%;
@@ -160,7 +164,7 @@
   height: 30px;
   position: fixed;
   top: 3vh;
-  left: 3%;
+  right: 3%;
   box-sizing: border-box;
   z-index: 20;
   transition: all 0.8s ease; }
