--- a/css/section-main.css
+++ b/css/section-main.css
@@ -8,16 +8,19 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 60%;
-  position: relative; }
+  position: relative;
+  transition: "all 0.3s ease"; }
   .section-main .text {
     position: absolute;
     margin-top: 22vh;
-    left: 5%; }
+    left: 5%;
+    transition: "all 0.3s ease"; }
     .section-main .text h1 {
       color: #ff00d4;
       font-family: Rochester;
       font-style: normal;
-      font-weight: normal; }
+      font-weight: normal;
+      transition: "all 0.3s ease"; }
     .section-main .text p {
       margin-top: 10%;
       font-family: 'Sansation Light';
@@ -25,7 +28,8 @@
       line-height: 1.8rem;
       color: #E3BBDD;
       font-family: Sansation Light;
-      font-style: normal; }
+      font-style: normal;
+      transition: all 0.1s ease; }
 
 .section-text {
   padding: 0 4%;
