--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -1,6 +1,8 @@
 $whitecolor: white;
 $blackcolor: black;
 
+$mainTransition : 'all 0.3s ease';
+
 @mixin section {
     width: 100%;
     min-height: 100vh !important;
@@ -20,6 +22,7 @@ $blackcolor: black;
     background-size: cover;
     background-position: 60%;
     position: relative;
+    transition: $mainTransition;
 
 
 
@@ -28,6 +31,7 @@ $blackcolor: black;
        
         margin-top: 22vh;
         left: 5%;
+        transition: $mainTransition;
 
         h1 {
             // font-size: calc((250vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
@@ -37,6 +41,7 @@ $blackcolor: black;
             font-family: Rochester;
             font-style: normal;
             font-weight: normal;
+            transition: $mainTransition;
         }
 
         p {
@@ -48,6 +53,7 @@ $blackcolor: black;
             color: #E3BBDD;
             font-family: Sansation Light;
             font-style: normal;
+            transition: all 0.1s ease;
         }
     }
 
