--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -1,7 +1,7 @@
 $whitecolor: white;
 $blackcolor: black;
 
-$mainTransition : 'all 0.1s ease';
+$mainTransition : 'all 0.5s ease';
 
 @mixin section {
     width: 100%;
@@ -53,7 +53,7 @@ $mainTransition : 'all 0.1s ease';
             color: #E3BBDD;
             font-family: Sansation Light;
             font-style: normal;
-            transition: all 0.1s ease;
+            transition: $mainTransition;
         }
     }
 
