--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -1,7 +1,7 @@
 $whitecolor: white;
 $blackcolor: black;
 
-$mainTransition : 'all 0.5s ease';
+$mainTransition : 'all 0.2s ease';
 
 @mixin section {
     width: 100%;
@@ -50,7 +50,8 @@ $mainTransition : 'all 0.5s ease';
             // font-size: calc((20vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
             font-size: 1.5rem;
             line-height: 1.8rem;
-            color: #E3BBDD;
+            // color: #E3BBDD;
+            color: red;
             font-family: Sansation Light;
             font-style: normal;
             transition: $mainTransition;
