--- a/css/section-main.css
+++ b/css/section-main.css
@@ -9,27 +9,27 @@
   background-size: cover;
   background-position: 60%;
   position: relative;
-  transition: "all 0.9s ease"; }
+  transition: "all 0.1s ease"; }
   .section-main .text {
     position: absolute;
     margin-top: 22vh;
     left: 5%;
-    transition: "all 0.9s ease"; }
+    transition: "all 0.1s ease"; }
     .section-main .text h1 {
       color: #ff00d4;
       font-family: Rochester;
       font-style: normal;
       font-weight: normal;
-      transition: "all 0.9s ease"; }
+      transition: "all 0.1s ease"; }
     .section-main .text p {
       margin-top: 10%;
       font-family: 'Sansation Light';
       font-size: 1.5rem;
       line-height: 1.8rem;
-      color: red;
+      color: green;
       font-family: Sansation Light;
       font-style: normal;
-      transition: "all 0.9s ease"; }
+      transition: "all 0.1s ease"; }
 
 .section-text {
   padding: 0 4%;
