--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@
       font-family: 'Sansation Light';
       font-size: 1.5rem;
       line-height: 1.8rem;
-      color: green;
+      color: yellow;
       font-family: Sansation Light;
       font-style: normal;
       transition: "all 0.1s ease"; }
