--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -51,7 +51,7 @@ $mainTransition : 'all 0.1s ease';
             font-size: 1.5rem;
             line-height: 1.8rem;
             // color: #E3BBDD;
-            color: green;
+            color: yellow;
             font-family: Sansation Light;
             font-style: normal;
             transition: $mainTransition;
