--- a/css/section-main.css
+++ b/css/section-main.css
@@ -27,7 +27,7 @@
       font-family: 'Sansation Light';
       font-size: 1.5rem;
       line-height: 1.8rem;
-      color: yellow;
+      color: #E3BBDD;
       font-family: Sansation Light;
       font-style: normal;
       transition: "all 10s ease"; }
