--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -50,8 +50,8 @@ $mainTransition : 'all 10s ease';
             // font-size: calc((20vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
             font-size: 1.5rem;
             line-height: 1.8rem;
-            // color: #E3BBDD;
-            color: yellow;
+            color: #E3BBDD;
+            // color: yellow;
             font-family: Sansation Light;
             font-style: normal;
             transition: $mainTransition;
